syntax = "proto3";

package todo.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/venslupro/todo-api/gen/go/todo/v1;todov1";

// 共享权限枚举
enum SharePermission {
  SHARE_PERMISSION_UNSPECIFIED = 0;
  SHARE_PERMISSION_VIEW = 1;
  SHARE_PERMISSION_EDIT = 2;
}

// 共享 TODO 列表消息
message SharedTodoList {
  string id = 1;
  string todo_id = 2;
  string owner_id = 3;
  string shared_with_user_id = 4;
  SharePermission permission = 5;
  google.protobuf.Timestamp shared_at = 6;
}

// 共享请求
message ShareTodoRequest {
  string todo_id = 1;
  string user_id = 2;
  SharePermission permission = 3;
}

message ShareTodoResponse {
  SharedTodoList shared_list = 1;
}

// 获取共享列表请求
message GetSharedTodosRequest {
  string user_id = 1;
}

message GetSharedTodosResponse {
  repeated SharedTodoList shared_lists = 1;
}

// 更新共享权限请求
message UpdateSharePermissionRequest {
  string share_id = 1;
  SharePermission permission = 2;
}

message UpdateSharePermissionResponse {
  SharedTodoList shared_list = 1;
}

// 移除共享请求
message RemoveShareRequest {
  string share_id = 1;
}

message RemoveShareResponse {
  bool success = 1;
}

// 团队服务定义
service TeamService {
  rpc ShareTodo(ShareTodoRequest) returns (ShareTodoResponse) {
    option (google.api.http) = {
      post: "/v1/team/share"
      body: "*"
    };
  }

  rpc GetSharedTodos(GetSharedTodosRequest) returns (GetSharedTodosResponse) {
    option (google.api.http) = {
      get: "/v1/team/shared/{user_id}"
    };
  }

  rpc UpdateSharePermission(UpdateSharePermissionRequest) returns (UpdateSharePermissionResponse) {
    option (google.api.http) = {
      patch: "/v1/team/share/{share_id}"
      body: "*"
    };
  }

  rpc RemoveShare(RemoveShareRequest) returns (RemoveShareResponse) {
    option (google.api.http) = {
      delete: "/v1/team/share/{share_id}"
    };
  }
}